--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "hacker-news-engine",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "http://noltron000.github.io/hacker-news-engine",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
@@ -11,9 +12,14 @@
 		"react-scripts": "4.0.3",
 		"web-vitals": "^1.0.1"
 	},
+	"devDependencies": {
+		"gh-pages": "^3.1.0"
+	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -b deployed -d build -m '[deploy]'",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
