[fix] using https in fetch

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "hacker-news-engine",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "http://noltron000.github.io/hacker-news-engine",
+	"homepage": "https://noltron000.github.io/hacker-news-engine",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
